--- a/templates/info.html
+++ b/templates/info.html
@@ -14,7 +14,7 @@ Press the arrow to expand/collapse to learn more about each type.
 
     <div id="melanoma" class="panel-collapse collapse">
       <div class="panel-body">
-        <img src="{{ url_for('static', filename = 'images/melanomaSample.jpg') }}" style="width: 15%; height: 15%; float:right; margin-left:10px;">
+        <img src="{{ url_for('static', filename = 'images/melanomaSample.png') }}" style="width: 15%; height: 15%; float:right; margin-left:10px;">
         <p>Melanoma is a type of skin cancer that develops when melanocytes (the cells that give the skin its tan or brown color) start to grow out of control. Cancer starts when cells in the body begin to grow out of control. Cells in nearly any part of the body can become cancer, and can then spread to other areas of the body.</p>
         <p>Melanoma is <b>much less common</b> than some other types of skin cancers. But melanoma is <b>more dangerous</b> because it’s much more likely to spread to other parts of the body if not caught and treated early.</p>
         <p>Melanomas can develop anywhere on the skin, but they are more likely to start on the trunk (chest and back) in men and on the legs in women. The neck and face are other common sites. Having darkly pigmented skin lowers your risk of melanoma at these more common sites, but anyone can get melanoma on the palms of the hands, soles of the feet, or under the nails. Melanomas in these areas make up a much larger portion of melanomas in African Americans than in whites.</p>
@@ -59,7 +59,7 @@ Press the arrow to expand/collapse to learn more about each type.
 
     <div id="nevus" class="panel-collapse collapse">
       <div class="panel-body">
-        <img src="{{ url_for('static', filename = 'images/nevusSample.jpg') }}" style="width: 15%; height: 15%; float:right; margin-left:10px;">
+        <img src="{{ url_for('static', filename = 'images/nevusSample.png') }}" style="width: 15%; height: 15%; float:right; margin-left:10px;">
         <p>Nevus (plural: nevi) is the medical term for a mole. Nevi are typically harmless.
             In particular, dysplastic nevi often resemble melanoma.</p>
         <p style="text-align: right">(From Healthline.com)</p>
@@ -97,7 +97,7 @@ Press the arrow to expand/collapse to learn more about each type.
       <div class="panel-body">
           A seborrheic keratosis is a common noncancerous (benign) skin growth. People tend to get more of them as they get older.
           Seborrheic keratosis is harmless and not contagious. Thus, they typically do not need treatment.
-          <img src="{{ url_for('static', filename = 'images/keratosisSample.jpg') }}" style="width: 15%; height: 15%; float: right; margin-left: 10px;">
+          <img src="{{ url_for('static', filename = 'images/keratosisSample.png') }}" style="width: 15%; height: 15%; float: right; margin-left: 10px;">
           <p style="text-align:right">(From MayoClinic.org)</p>
         <div class="container">
               <div class="row justify-content-md-center">
